# sciscinet-full-stack-backend

./: .gitignore  README.md  pyproject.toml
docs/: dataset_card.md  preprocessing.txt
preprocessing/: 01_validation.ipynb  02_preprocessing.ipynb  validation_config.py
scripts/: setup_redis.sh
src/: cache.py  database.py  main.py
src/api/: routes.py
src/scripts/: pre_cache.py
src/services/: processing.py
tests/: run_all_tests.py  test_api.py  test_database.py  test_redis.py  test_services.py
