[project]
name = "sciscinet-backend"
version = "0.1.0"
description = "SciSciNet Data Visualization Backend POC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "aiosqlite>=0.20.0",
    "redis>=5.2.0",
    "networkx>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
]
